# plr-sila-bridge

./: .bumpversion.cfg  .gitignore  .gitlab-ci.yml  AUTHORS.md  DEVELOPMENT.md  Dockerfile  HISTORY.md  Makefile  README.md  TODOs.md  docker-compose.yml  pyproject.toml  setup.py  tasks.py
.github/workflows/: deploy_python_package.yml
SiLA_Features/: DeviceInfoProvider-v1_1.sila.xml
docs/: conf.py  index.rst  installation.rst  usage.rst
jupyter/: README.md
plr_sila_bridge/: pyproject.toml
plr_sila_bridge/plr_sila_bridge/: server.py
plr_sila_bridge/plr_sila_bridge/feature_implementations/: deviceinfoprovider_impl.py
pylabrobot_sila_bridge/: __init__.py  __main__.py  pylabrobot_sila_bridge_impl.py  pylabrobot_sila_bridge_interface.py
tests/: __init__.py  test_pylabrobot_sila_bridge.py
