[project]
name = "plr_sila_bridge"
version = "0.0.0"
requires-python = ">=3.8"
dependencies = [
    "sila2",
    "typer",
]

[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["plr_sila_bridge*"]

[tool.setuptools.package-data]
"plr_sila_bridge.generated" = [
    "*/*.sila.xml",
    "*/*.proto",
]
